Fixed image spacing

--- a/assets/sass/theme.scss
+++ b/assets/sass/theme.scss
@@ -45,7 +45,7 @@ html {
     padding: .475rem 0.75rem;
 }
 
-.img-fluid {
+.services .img-fluid {
     padding: 0px 50px;
 }
 
